--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -7,7 +7,7 @@
                     <div class="main-content">
                         <div class="shine-effect">
                             <div class="imghigh">
-                                <img src="images/business-woman-working-in-an-office.jpeg" alt="Nutrition">
+                                <img src="images/business-woman-working-in-an-office.jpeg" loading="lazy" alt="Nutrition">
                             </div>
                         </div>
                         <div class="meta by-admin">
@@ -24,7 +24,7 @@
                         <div class="position-sticky">
                             <div class="contact-box">
                                 <div class="shine-effect canter-content">
-                                    <img src="images/15.jpeg" alt="Contact">
+                                    <img src="images/15.jpeg" loading="lazy" alt="Contact">
 
                                     <div class="img-contant">
                                         <h5>Have you any questio</h5>
@@ -43,7 +43,7 @@
                             <div class="service-item-main">
                                 <h4>Our Categories</h4>
                                 <article class="post">
-                                    <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" alt=""><a
+                                    <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" loading="lazy" alt=""><a
                                             href="#" class="overlay-box"><span class="icon fa fa-link"></span></a>
                                     </figure>
                                     <div class="contentrifgty">
@@ -53,7 +53,7 @@
                                     </div>
                                 </article>
                                 <article class="post">
-                                    <figure class="post-thumb"><img src="images/codependency.webp" alt=""><a href="#"
+                                    <figure class="post-thumb"><img src="images/codependency.webp" loading="lazy" alt=""><a href="#"
                                             class="overlay-box"><span class="icon fa fa-link"></span></a>
                                     </figure>
                                     <div class="contentrifgty">
@@ -63,7 +63,7 @@
                                     </div>
                                 </article>
                                 <article class="post">
-                                    <figure class="post-thumb"><img src="images/codependency.webp" alt=""><a href="#"
+                                    <figure class="post-thumb"><img src="images/codependency.webp" loading="lazy" alt=""><a href="#"
                                             class="overlay-box"><span class="icon fa fa-link"></span></a>
                                     </figure>
                                     <div class="contentrifgty">
