--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -27,7 +27,7 @@
                                     <div class="author-box">
                                         <div class="box-inner">
                                             <div class="author-image">
-                                                <img src="images/16.jpeg" alt="">
+                                                <img src="images/16.jpeg" loading="lazy" alt="">
                                             </div>
                                             by <span [innerHTML]="post._embedded?.author[0]?.name"></span>
 
@@ -59,7 +59,7 @@
                                         <h4> About Me </h4>
                                     </div>
                                     <div class="image">
-                                        <img src="images/16.jpeg" alt="">
+                                        <img src="images/16.jpeg" loading="lazy" alt="">
                                     </div>
                                     <div class="lower-content">
                                         <h6>kenny Weiss</h6>
@@ -103,7 +103,7 @@
                                     </div>
 
                                     <article class="post">
-                                        <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" alt=""><a
+                                        <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" loading="lazy" alt=""><a
                                                 href="#" class="overlay-box"><span class="icon fa fa-link"></span></a>
                                         </figure>
                                         <div class="contentrifgty">
@@ -114,7 +114,7 @@
                                     </article>
 
                                     <article class="post">
-                                        <figure class="post-thumb"><img src="images/codependency.webp" alt=""><a
+                                        <figure class="post-thumb"><img src="images/codependency.webp" loading="lazy" alt=""><a
                                                 href="#" class="overlay-box"><span class="icon fa fa-link"></span></a>
                                         </figure>
                                         <div class="contentrifgty">
@@ -125,7 +125,7 @@
                                     </article>
 
                                     <article class="post">
-                                        <figure class="post-thumb"><img src="images/How-to-Keep.webp" alt=""><a href="#"
+                                        <figure class="post-thumb"><img src="images/How-to-Keep.webp" loading="lazy" alt=""><a href="#"
                                                 class="overlay-box"><span class="icon fa fa-link"></span></a>
                                         </figure>
                                         <div class="contentrifgty">
@@ -136,7 +136,7 @@
                                         </div>
                                     </article>
                                     <article class="post">
-                                        <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" alt=""><a
+                                        <figure class="post-thumb"><img src="images/Have-You-Experienced.webp" loading="lazy" alt=""><a
                                                 href="#" class="overlay-box"><span class="icon fa fa-link"></span></a>
                                         </figure>
                                         <div class="contentrifgty">
@@ -155,7 +155,7 @@
                                         <h5>Sponsor Adds</h5>
                                     </div>
                                     <div class="add-image">
-                                        <img src="images/add.jpeg" alt="">
+                                        <img src="images/add.jpeg" loading="lazy" alt="">
                                         <div class="add-size">270x240</div>
                                     </div>
                                 </div>
