--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="contactflexform">
                     <div class="leftcontactimg">
-                        <img src="images/others-img2.png">
+                        <img src="images/others-img2.png" loading="lazy" alt="">
                     </div>
 
                     <div class="form">
