--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -31,7 +31,7 @@
                     </div>
                     </div>
                     <div class="right-wordsendcycal">
-                        <img src="images/feelings-wheel.webp" alt="feeling-wheel"/>
+                        <img src="images/feelings-wheel.webp" loading="lazy" alt="feeling-wheel"/>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="card-row green" data-aos="fade-up" data-aos-duration="1500">
                     <div class="card-image-grey-bg">
-                        <img src="images/afro-american-business-woman.jpeg" class="image-c">
+                        <img src="images/afro-american-business-woman.jpeg"  class="image-c" loading="lazy" alt="">
                     </div>
                     <div class="card-content-grey-bg">
                         <h3>Your Journey to Being Yourself</h3>
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="card-image-grey-bg">
-                        <img src="images/12.jpeg" class="image-c">
+                        <img src="images/12.jpeg" class="image-c" loading="lazy" alt="">
                     </div>
                 </div>
 
@@ -106,11 +106,11 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/5.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
+                                    <img src="images/5.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy"/>
                                     <div class="testimonial-content">
                                         <h3>Monday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
                                         <p class="testimonial-message">Thank you, thank you, thank you !
                                             The Master of Coaching !
                                             ’I’ve listened to many Therapist’s / Coach and nothing has been so
@@ -122,11 +122,11 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/9.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
+                                    <img src="images/9.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                     <div class="testimonial-content">
                                         <h3>Tuesday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
                                         <p class="testimonial-message">Kenny is good at what he does. I did a lot of
                                             healing before I started his class and listening to his videos. But he has
                                             given me the last piece of the puzzle that I was missing and that is that I
@@ -141,10 +141,10 @@
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
                                     <img src="./images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/12.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/12.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                     <div class="testimonial-content">
                                         <h3>Wednesday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
                                         <p class="testimonial-message">Thank you 🙏😊
                                             He came to me at the right time.</p>
                                         <p class="testimonial-author">akshay a dwivedi</p>
