--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="topbar">
                 <div class="logo">
                     <a routerLink="/" class="logo-brand">
-                        <img src="images/logo.png">
+                        <img src="images/logo.png" loading="lazy" alt="logo">
                     </a>
 
                     <div class="flexsocial whitei">
