--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -170,10 +170,10 @@
                     <!-- Left Side -->
                     <div class="left">
                         <div class="shine-effect">
-                            <img src="images/4.jpeg" alt="Team Image" />
+                            <img src="images/4.jpeg" alt="Team Image" loading="lazy" />
                         </div>
                         <div class="award-badge">
-                            <img src="images/icf_horizontal.png" class="award-star">
+                            <img src="images/icf_horizontal.png" class="award-star" loading="lazy" alt="">
                             <h4>Certified Life Coach</h4>
                         </div>
                     </div>
@@ -218,26 +218,26 @@
                         <div class="video-box-row">
                             <ul>
                                 <li data-aos="fade-up" data-aos-duration="100">
-                                    <span class="iconlist"><img src="images/long-term.png"></span>
+                                    <span class="iconlist"><img src="images/long-term.png" loading="lazy" alt=""></span>
                                     <p> Everything starts in childhood.
                                         When you finally understand how your past shapes your present, you gain the
                                         power to
                                         change your future.</p>
                                 </li>
                                 <li data-aos="fade-up" data-aos-duration="200">
-                                    <span class="iconlist"><img src="images/active.png"></span>
+                                    <span class="iconlist"><img src="images/active.png" loading="lazy" alt=""></span>
                                     <p> Author of “Your Journey to Success” & “The Greatness Movement”</p>
                                 </li>
                                 <li data-aos="fade-up" data-aos-duration="300">
-                                    <span class="iconlist"><img src="images/podcast.png"></span>
+                                    <span class="iconlist"><img src="images/podcast.png" loading="lazy" alt=""></span>
                                     <p> Host of the "Heal the Hurt" Podcast</p>
                                 </li>
                                 <li data-aos="fade-up" data-aos-duration="400">
-                                    <span class="iconlist"><img src="images/creator.png"></span>
+                                    <span class="iconlist"><img src="images/creator.png" loading="lazy" alt=""></span>
                                     <p> Creator of Emotional Mastery method </p>
                                 </li>
                                 <li data-aos="fade-up" data-aos-duration="500">
-                                    <span class="iconlist"><img src="images/conference.png"></span>
+                                    <span class="iconlist"><img src="images/conference.png" loading="lazy" alt=""></span>
                                     <p class="content">Featured in 100+ speaking events, 10,000+ sessions </p>
                                 </li>
                                 <div class="button-row" data-aos="fade-up" data-aos-duration="600">
@@ -246,7 +246,7 @@
                                 </div>
                             </ul>
                             <div class="video-box shine-effect">
-                                <img src="images/5.jpeg" alt="Thumbnail" id="myImage"
+                                <img src="images/5.jpeg" alt="Thumbnail" loading="lazy" id="myImage"
                                     style="width:200px;cursor:pointer;">
                                 <a class="video-play-button"><span></span></a>
 
@@ -325,11 +325,11 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/5.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
+                                    <img src="images/5.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                     <div class="testimonial-content">
                                         <h3>Monday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" />
                                         <p class="testimonial-message">Thank you, thank you, thank you !
                                             The Master of Coaching !
                                             ’I’ve listened to many Therapist’s / Coach and nothing has been so
@@ -341,11 +341,11 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/9.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
+                                    <img src="images/9.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                     <div class="testimonial-content">
                                         <h3>Tuesday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
                                         <p class="testimonial-message">Kenny is good at what he does. I did a lot of
                                             healing before I started his class and listening to his videos. But he has
                                             given me the last piece of the puzzle that I was missing and that is that I
@@ -359,11 +359,11 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/12.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
+                                    <img src="images/12.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                     <div class="testimonial-content">
                                         <h3>Wednesday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
                                         <p class="testimonial-message">Thank you 🙏😊
                                             He came to me at the right time.</p>
                                         <p class="testimonial-author">akshay a dwivedi</p>
@@ -407,7 +407,7 @@
                                     😊"</p>
                             </div>
                             <div class="user">
-                                <img src="./images/unnamed.png" alt="Ribeka Cruz">
+                                <img src="./images/unnamed.png" loading="lazy" alt="Ribeka Cruz">
                                 <h4>ss</h4>
                                 <p>April 5, 2024.</p>
                             </div>
@@ -443,83 +443,7 @@
 
         </section>
 
-        <!-- <section class="paddings">
-            <div class="container">
-                <div class="works-sections">
-                    <div class="left" data-aos="zoom-in-right">
-                        <h5 class="tag-line">How it works?</h5>
-                        <h3>Journey to Success Exercises Workbook</h3>
-                        <p>Kenny Weiss believes if he is going to teach it, he must first live it and learn from it.
-                            Kenny Weiss specializes in helping you heal the pain from your past, transform your toxic
-                            relationships, learn to love and accept your perfect imperfections, and reclaim your
-                            authentic self! Kenny brings knowledge through his own experience and encourages you to get
-                            comfortable with feeling uncomfortable.</p>
 
-
-                        <div class="kannyimgg">
-                            <img src="images/16.jpeg">
-                        </div>
-
-
-                        <div class="cta-box">
-                            <h3>Kenny Weiss: Truth & Healing Advocate</h3>
-                            <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
-                                from the past so they can once again love themselves. </p>
-                            <div class="button-row">
-                                <a class="button" href="book-session.html">Let’s talk</a>
-                            </div>
-                            <div class="step"><small>All queries are replied within
-                                    <u>24hrs</u>.</small></div>
-                        </div>
-
-                    </div>
-
-                    <div class="right" data-aos="zoom-in-left">
-                        <div class="step-line"></div>
-  
-                    <div class="step">
-                            <div class="step-number">1</div>
-                            <div class="step-content">
-                                <h4>Truly Heard — Without Judgment</h4>
-                                <p>This isn’t a surface-level chat. It’s a safe space where your feelings, pain, and
-                                    questions are met with understanding — not shame or dismissal.</p>
-                            </div>
-                        </div>
-
-                        <div class="step">
-                            <div class="step-number">2</div>
-                            <div class="step-content">
-                                <h4>Clarity on What’s Really Going On</h4>
-                                <p>Most people don't realize what's beneath their sadness, fatigue, or numbness. Kenny
-                                    helps you identify the real root — not just treat the symptoms.</p>
-                            </div>
-                        </div>
-
-                        <div class="step">
-                            <div class="step-number">3</div>
-                            <div class="step-content">
-                                <h4>Personalized Path Forward</h4>
-                                <p>No cookie-cutter advice here. Based on your unique situation, Kenny outlines clear
-                                    next steps so you know exactly what healing can look like — for you.</p>
-                            </div>
-                        </div>
-
-
-                        <div class="step">
-                            <div class="step-number">4</div>
-                            <div class="step-content">
-                                <h4>Leave With Hope (Maybe for the First Time in a While)</h4>
-                                <p>Even a single conversation can help you feel lighter, more seen, and less alone — and
-                                    that spark can change everything.</p>
-                            </div>
-                        </div> 
-
-
-
-                    </div>
-                </div>
-            </div>
-        </section> -->
 
 
         <app-exercises-workbook/>
@@ -549,7 +473,7 @@
 
                     <div class="blog-post">
                         <div class="blog-img shine-effect">
-                            <img src="images/1.jpeg">
+                            <img src="images/1.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="card-content">
                             <div class="meta">
@@ -566,7 +490,7 @@
 
                     <div class="blog-post">
                         <div class="blog-img shine-effect">
-                            <img src="images/4.jpeg">
+                            <img src="images/4.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="card-content">
                             <div class="meta">
@@ -583,7 +507,7 @@
 
                     <div class="blog-post">
                         <div class="blog-img shine-effect">
-                            <img src="images/16.jpeg">
+                            <img src="images/16.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="card-content">
                             <div class="meta">
@@ -600,7 +524,7 @@
 
                     <div class="blog-post">
                         <div class="blog-img shine-effect">
-                            <img src="images/12.jpeg">
+                            <img src="images/12.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="card-content">
                             <div class="meta">
@@ -668,7 +592,7 @@
                     </div>
 
                     <div class="podcast-right shine-effect">
-                        <img src="images/KEN-Podcast-1.jpeg" alt="Podcast" />
+                        <img src="images/KEN-Podcast-1.jpeg" loading="lazy" alt="Podcast" />
                     </div>
 
 
@@ -682,15 +606,15 @@
                     <!-- Left Side Images -->
                     <div class="left-images">
                         <div class="main-img">
-                            <img src="images/books.webp" alt="Woman on computer">
+                            <img src="images/books.webp" loading="lazy"  alt="Woman on computer">
                         </div>
                         <div class="video-boxes">
-                            <img src="images/books2.jpeg" alt="Video thumbnail">
+                            <img src="images/books2.jpeg" loading="lazy" alt="Video thumbnail">
 
                             <div class="audio-player">
                                 <button id="playBtn">
-                                    <img id="playIcon" src="images/play.png" alt="Play" />
-                                    <img id="pauseIcon" src="images/pause-button.png" alt="Pause"
+                                    <img id="playIcon" src="images/play.png" alt="Play" loading="lazy" />
+                                    <img id="pauseIcon" src="images/pause-button.png" loading="lazy" alt="Pause"
                                         style="display:none;" />
                                 </button>
                             </div>
