--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -3,7 +3,7 @@
             <div class="container">
                 <div class="resourcsertymain">
                     <div class="leftresourcsertymain">
-                        <img src="images/12.jpeg">
+                        <img src="images/12.jpeg" loading="lazy" alt="">
                     </div>
                     <div class="righttresourcsertymain">
                         <h2>Welcome to The Greatness Movement</h2>
@@ -99,7 +99,7 @@
                     </div>
 
                     <div class="podcast-right shine-effect">
-                        <img src="images/KEN-Podcast-1.jpeg" alt="Podcast">
+                        <img src="images/KEN-Podcast-1.jpeg" loading="lazy" alt="Podcast">
                     </div>
 
 
@@ -116,7 +116,7 @@
                 <div class="flex-who-we-are">
                     <div class="left-images">
                         <div class="main-img">
-                            <img src="images/5.jpeg" alt="Woman on computer">
+                            <img src="images/5.jpeg" loading="lazy" alt="Woman on computer">
                         </div>
                     </div>
 
@@ -181,14 +181,14 @@
                             </div>
                         </div>
                         <div class="freeform-img">
-                            <img src="images/feelingrejected.jpeg">
+                            <img src="images/feelingrejected.jpeg" loading="lazy" alt="">
                         </div>
                     </div>
 
                     <div class="card-columns" data-aos="fade-up" data-aos-duration="1500"> 
 
                         <div class="freeform-img">
-                            <img src="images/Resource-Page-Heal-1.jpeg">
+                            <img src="images/Resource-Page-Heal-1.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="formleffieldds">
                             <div class="allminsders">
@@ -247,13 +247,13 @@
                         </div>
 
                         <div class="freeform-img">
-                            <img src="images/Resource-Page-Boundaries.jpeg">
+                            <img src="images/Resource-Page-Boundaries.jpeg" loading="lazy" alt="">
                         </div>
                     </div>
 
                     <div class="card-columns" data-aos="fade-up" data-aos-duration="1500"> 
                         <div class="freeform-img">
-                            <img src="images/Free-Resources-2.jpeg">
+                            <img src="images/Free-Resources-2.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="formleffieldds">
                             <div class="allminsders">
@@ -315,13 +315,13 @@
                         </div>
 
                         <div class="freeform-img">
-                            <img src="images/Resource-Page-Giving-back-pain.jpeg">
+                            <img src="images/Resource-Page-Giving-back-pain.jpeg" loading="lazy" alt="">
                         </div>
                     </div>
 
                     <div class="card-columns" data-aos="fade-up" data-aos-duration="1500">
                         <div class="freeform-img">
-                            <img src="images/Free-Resources-2-Feelingswhee1-1.jpeg">
+                            <img src="images/Free-Resources-2-Feelingswhee1-1.jpeg" loading="lazy" alt="">
                         </div>
                         <div class="formleffieldds">
                             <div class="allminsders">
