--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -11,8 +11,8 @@
                             Cycle.</p>
                     </div>
                     <div class="right-wordsendcycal">
-                        <img src="images/worst-day-cycle.png" class="cycle2">
-                        <img src="images/worst-day-text.png" class="worst-day-text">
+                        <img src="images/worst-day-cycle.png"  class="cycle2" loading="lazy" alt="">
+                        <img src="images/worst-day-text.png" class="worst-day-text" loading="lazy" alt="">
                     </div>
                 </div>
             </div>
@@ -57,8 +57,8 @@
                     </div>
 
                     <div class="images">
-                        <div class="img1"><img src="images/1.jpeg" alt="Group Coaching"></div>
-                        <div class="img2"><img src="images/leadership-collaboration.jpeg" alt="Workshop Session"></div>
+                        <div class="img1"><img src="images/1.jpeg" alt="Group Coaching" loading="lazy"></div>
+                        <div class="img2"><img src="images/leadership-collaboration.jpeg" alt="Workshop Session" loading="lazy"></div>
                         <div class="decor"></div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
 
                     <div class="bookcard" data-aos="fade-up" data-aos-duration="1500">
                         <div class="bookcardimg">
-                            <img src="images/part1.webp">
+                            <img src="images/part1.webp" loading="lazy" alt="">
                         </div>
                         <div class="bookcardbody">
                             <h4>How To Heal The Worst Day Cycle- Part 1</h4>
@@ -109,7 +109,7 @@
 
                             <div class="author">
                                 <div>
-                                    <img src="images/16.jpeg" alt="Author">
+                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
                                     <div class="author-info">
                                         <span>By Kenny</span>
                                     </div>
@@ -125,7 +125,7 @@
 
                     <div class="bookcard" data-aos="fade-up" data-aos-duration="1500">
                         <div class="bookcardimg">
-                            <img src="images/part2.webp">
+                            <img src="images/part2.webp" loading="lazy" alt="">
                         </div>
                         <div class="bookcardbody">
                             <h4>How To Heal The Worst Day Cycle – Part 2 Trauma</h4>
@@ -140,7 +140,7 @@
 
                             <div class="author">
                                 <div>
-                                    <img src="images/16.jpeg" alt="Author">
+                                    <img src="images/16.jpeg" alt="Author" loading="lazy" alt="">
                                     <div class="author-info">
                                         <span>By Kenny</span>
                                     </div>
@@ -157,7 +157,7 @@
 
                     <div class="bookcard" data-aos="fade-up" data-aos-duration="1500">
                         <div class="bookcardimg">
-                            <img src="images/part3.webp">
+                            <img src="images/part3.webp" loading="lazy" alt="">
                         </div>
                         <div class="bookcardbody">
                             <h4>How To Heal The Worst Day Cycle – Part 3 Fear</h4>
@@ -172,7 +172,7 @@
 
                             <div class="author">
                                 <div>
-                                    <img src="images/16.jpeg" alt="Author">
+                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
                                     <div class="author-info">
                                         <span>By Kenny</span>
                                     </div>
@@ -189,7 +189,7 @@
 
                     <div class="bookcard" data-aos="fade-up" data-aos-duration="1500">
                         <div class="bookcardimg">
-                            <img src="images/part4.webp">
+                            <img src="images/part4.webp" loading="lazy" alt=""> 
                         </div>
                         <div class="bookcardbody">
                             <h4>How To Heal The Worst Day Cycle – Part 4 Shame</h4>
@@ -204,7 +204,7 @@
 
                             <div class="author">
                                 <div>
-                                    <img src="images/16.jpeg" alt="Author">
+                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
                                     <div class="author-info">
                                         <span>By Kenny</span>
                                     </div>
@@ -221,7 +221,7 @@
 
                     <div class="bookcard" data-aos="fade-up" data-aos-duration="1500">
                         <div class="bookcardimg">
-                            <img src="images/part5.webp">
+                            <img src="images/part5.webp" loading="lazy" alt="">
                         </div>
                         <div class="bookcardbody">
                             <h4>How To Heal The Worst Day Cycle – Part 5 Denial</h4>
@@ -238,7 +238,7 @@
 
                             <div class="author">
                                 <div>
-                                    <img src="images/16.jpeg" alt="Author">
+                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
                                     <div class="author-info">
                                         <span>By Kenny</span>
                                     </div>
@@ -255,7 +255,7 @@
 
                     <div class="bookcard" data-aos="fade-up" data-aos-duration="1500">
                         <div class="bookcardimg">
-                            <img src="images/part5.webp">
+                            <img src="images/part5.webp" loading="lazy" alt="">
                         </div>
                         <div class="bookcardbody">
                             <h4>How To Heal The Worst Day Cycle- Part 1</h4>
@@ -270,7 +270,7 @@
 
                             <div class="author">
                                 <div>
-                                    <img src="images/16.jpeg" alt="Author">
+                                    <img src="images/16.jpeg" alt="Author" loading="lazy">
                                     <div class="author-info">
                                         <span>By Kenny</span>
                                     </div>
