--- a/src/app/layout/courses/courses.component.html
+++ b/src/app/layout/courses/courses.component.html
@@ -12,10 +12,10 @@
                     <!-- Left Side Images -->
                     <div class="left-images">
                         <div class="main-img">
-                            <img src="images/price-change1.jpeg" alt="Woman on computer">
+                            <img src="images/price-change1.jpeg" loading="lazy" alt="Woman on computer">
                         </div>
                         <div class="video-boxes">
-                            <img src="images/afro-american-business-woman.jpeg" alt="Video thumbnail">
+                            <img src="images/afro-american-business-woman.jpeg" loading="lazy" alt="Video thumbnail">
                             <a id="play-video" target="_blank" class="video-play-button"
                                 href="https://youtu.be/a1udGRR63OA?si=D7Iddfp5ezrC8jTJ" data-toggle="modal"
                                 data-target="#savoybeachhotel">
@@ -58,10 +58,10 @@
                     <!-- Left Side Images -->
                     <div class=" left-images">
                         <div class="main-img">
-                            <img src="images/price-change2.png" alt="Woman on computer">
+                            <img src="images/price-change2.png" loading="lazy" alt="Woman on computer">
                         </div>
                         <div class="video-boxes">
-                            <img src="images/afro-american-business-woman.jpeg" alt="Video thumbnail">
+                            <img src="images/afro-american-business-woman.jpeg" loading="lazy" alt="Video thumbnail">
                             <a id="play-video" target="_blank" class="video-play-button"
                                 href="https://youtu.be/a1udGRR63OA?si=D7Iddfp5ezrC8jTJ" data-toggle="modal"
                                 data-target="#savoybeachhotel">
@@ -106,10 +106,10 @@
                     <!-- Left Side Images -->
                     <div class="left-images">
                         <div class="main-img">
-                            <img src="images/price-change3.png" alt="Woman on computer">
+                            <img src="images/price-change3.png" loading="lazy" alt="Woman on computer">
                         </div>
                         <div class="video-boxes">
-                            <img src="images/afro-american-business-woman.jpeg" alt="Video thumbnail">
+                            <img src="images/afro-american-business-woman.jpeg" loading="lazy" alt="Video thumbnail">
                             <a id="play-video" target="_blank" class="video-play-button"
                                 href="https://youtu.be/a1udGRR63OA?si=D7Iddfp5ezrC8jTJ" data-toggle="modal"
                                 data-target="#savoybeachhotel">
@@ -152,14 +152,14 @@
                     <div class="left-area">
                         <div class="thumbnail-wrapper3">
                             <div class="course-1">
-                                <img src="images/price-change1.jpeg">
+                                <img src="images/price-change1.jpeg" loading="lazy" alt="">
                             </div>
                             <div class="touimg">
                                 <div class="thumbnail image-2">
-                                    <img src="images/price-change2.png">
+                                    <img src="images/price-change2.png" loading="lazy" alt="">
                                 </div>
                                 <div class="thumbnail image-3">
-                                    <img src="images/price-change3.png">
+                                   <img src="images/price-change3.png" loading="lazy" alt="Price Change">
                                 </div>
                             </div>
                         </div>
@@ -234,11 +234,11 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/5.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" loading="lazy" alt="" class="testimonialimg" />
+                                    <img src="images/5.jpeg"  class="userpertion" loading="lazy" alt="Testimonial Person" />
                                     <div class="testimonial-content">
                                         <h3>Monday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" loading="lazy" alt="" class="stars" />
                                         <p class="testimonial-message">Thank you, thank you, thank you !
                                             The Master of Coaching !
                                             ’I’ve listened to many Therapist’s / Coach and nothing has been so
@@ -250,11 +250,11 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/9.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
+                                    <img src="images/9.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                     <div class="testimonial-content">
                                         <h3>Tuesday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
                                         <p class="testimonial-message">Kenny is good at what he does. I did a lot of
                                             healing before I started his class and listening to his videos. But he has
                                             given me the last piece of the puzzle that I was missing and that is that I
@@ -268,11 +268,11 @@
                             </div>
                             <div class="swiper-slide">
                                 <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/12.jpeg" class="userpertion" alt="Testimonial Person" />
+                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
+                                    <img src="images/12.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
                                     <div class="testimonial-content">
                                         <h3>Wednesday</h3>
-                                        <img src="images/star.svg" class="stars" />
+                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
                                         <p class="testimonial-message">Thank you 🙏😊
                                             He came to me at the right time.</p>
                                         <p class="testimonial-author">akshay a dwivedi</p>
