--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -21,35 +21,35 @@
                 <div class="marquee__inner">
                     <div class="marquee__group">
                         <div class="instagram-feed">
-                            <a href="#"><img src="./images/1.jpeg"></a>
-                            <a href="#"><img src="./images/2.jpeg"></a>
-                            <a href="#"><img src="./images/3.jpeg"></a>
-                            <a href="#"><img src="./images/4.jpeg"></a>
-                            <a href="#"><img src="./images/5.jpeg"></a>
-                            <a href="#"><img src="./images/6.jpeg"></a>
-                            <a href="#"><img src="./images/7.jpeg"></a>
-                            <a href="#"><img src="./images/8.jpeg"></a>
-                            <a href="#"><img src="./images/9.jpeg"></a>
-                            <a href="#"><img src="./images/10.jpeg"></a>
-                            <a href="#"><img src="./images/11.jpeg"></a>
-                            <a href="#"><img src="./images/12.jpeg"></a>
+                            <a href="#"><img src="./images/1.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/2.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/3.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/4.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/5.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/6.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/7.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/8.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/9.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/10.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/11.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/12.jpeg" loading="lazy" alt=""></a>
                         </div>
                     </div>
 
                     <div class="marquee__group">
                         <div class="instagram-feed">
-                            <a href="#"><img src="./images/1.jpeg"></a>
-                            <a href="#"><img src="./images/2.jpeg"></a>
-                            <a href="#"><img src="./images/3.jpeg"></a>
-                            <a href="#"><img src="./images/4.jpeg"></a>
-                            <a href="#"><img src="./images/5.jpeg"></a>
-                            <a href="#"><img src="./images/6.jpeg"></a>
-                            <a href="#"><img src="./images/7.jpeg"></a>
-                            <a href="#"><img src="./images/8.jpeg"></a>
-                            <a href="#"><img src="./images/9.jpeg"></a>
-                            <a href="#"><img src="./images/10.jpeg"></a>
-                            <a href="#"><img src="./images/11.jpeg"></a>
-                            <a href="#"><img src="./images/12.jpeg"></a>
+                            <a href="#"><img src="./images/1.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/2.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/3.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/4.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/5.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/6.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/7.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/8.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/9.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/10.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/11.jpeg" loading="lazy" alt=""></a>
+                            <a href="#"><img src="./images/12.jpeg" loading="lazy" alt=""></a>
                         </div>
                     </div>
                 </div>
